[package]
name = "md-viewer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comrak = { version = "0.24.1", features = ["arbitrary", "emojis", "shortcodes"] }
url = "2.5.2"
tauri-plugin-deep-link = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
base64 = "0.22.1"

# [features]
# default = [ "custom-protocol" ]
# custom-protocol = ["tauri/custom-protocol"]
